[package]
name = "bijux-dna-domain-bam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-dna-core = { path = "../bijux-dna-core" }
anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
insta = { workspace = true, features = ["json"] }
walkdir.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }