[package]
name = "bijux-dna-domain-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }

[lints]
workspace = true
