[package]
name = "bijux-dna-domain-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
sha2.workspace = true
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }

[dev-dependencies]
bijux-dna-policies.workspace = true

[lints]
workspace = true
