[package]
name = "bijux-dna-domain-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true
bijux-dna-infra = { workspace = true, features = ["yaml"] }
bijux-dna-domain-fastq.workspace = true
bijux-dna-domain-bam.workspace = true
bijux-dna-domain-vcf.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true
tempfile.workspace = true

[lints]
workspace = true
