[package]
name = "bijux-dna-domain-fastq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }
schemars.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true
insta = { workspace = true, features = ["json"] }
walkdir.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }

[lints]
workspace = true
