[package]
name = "bijux-dna-domain-fastq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true
bijux-dna-core.workspace = true
bijux-dna-infra = { workspace = true, features = ["yaml"] }
schemars.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true
insta = { workspace = true, features = ["json"] }
walkdir.workspace = true
bijux-dna-testkit.workspace = true

[lints]
workspace = true
