[package]
name = "bijux-dna-domain-vcf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[lints]
workspace = true

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
