[package]
name = "bijux-dna-engine"
version = "0.1.0"
edition.workspace = true

license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true
tempfile.workspace = true
cargo_metadata.workspace = true
walkdir.workspace = true

[lints]
workspace = true
