[package]
name = "bijux-dna-environment-qa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true
clap.workspace = true
rusqlite = "0.39"
bijux-dna-environment = { path = "../bijux-dna-environment" }
bijux-dna-analyze = { path = "../bijux-dna-analyze", features = ["sqlite"] }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }

[dev-dependencies]
bijux-dna-policies.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }

[lints]
workspace = true

[features]
default = []
sqlite = []
