[package]
name = "bijux-dna-environment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
test = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }

[dev-dependencies]
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-policies.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
walkdir.workspace = true

[lints]
workspace = true
