[package]
name = "bijux-dna-pipelines"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }

[features]
bam_downstream = []

[dev-dependencies]
insta = { version = "1", features = ["json"] }
bijux-dna-policies = { path = "../bijux-dna-policies" }
walkdir.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }