[package]
name = "bijux-dna-pipelines"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-vcf = { path = "../bijux-dna-domain-vcf" }

[features]
bam_downstream = []

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
bijux-dna-policies.workspace = true
walkdir.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
