[package]
name = "bijux-dna-planner-bam"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-stage-contract = { path = "../bijux-dna-stage-contract" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-stages-bam = { path = "../bijux-dna-stages-bam", features = ["bam_downstream"] }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
bijux-dna-policies.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
insta = { workspace = true, features = ["json", "filters"] }
tempfile.workspace = true

[features]
bam_downstream = [
    "bijux-dna-pipelines/bam_downstream",
    "bijux-dna-stages-bam/bam_downstream",
]
