[package]
name = "bijux-dna-planner-fastq"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-stage-contract = { path = "../bijux-dna-stage-contract" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
bijux-dna-stages-fastq = { path = "../bijux-dna-stages-fastq" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
insta = { version = "1", features = ["json", "filters"] }
