[package]
name = "bijux-dna-planner-fastq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-stage-contract = { path = "../bijux-dna-stage-contract" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
bijux-dna-stages-fastq = { path = "../bijux-dna-stages-fastq" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
bijux-dna-policies.workspace = true
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
flate2.workspace = true
insta = { workspace = true, features = ["json", "filters"] }

[lints]
workspace = true
