[package]
name = "bijux-dna-planner-fastq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bijux-dna-core.workspace = true
bijux-dna-stage-contract.workspace = true
bijux-dna-domain-fastq.workspace = true
bijux-dna-domain-bam.workspace = true
bijux-dna-pipelines.workspace = true
bijux-dna-stages-fastq.workspace = true
bijux-dna-infra.workspace = true
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
bijux-dna-policies.workspace = true
bijux-dna-testkit.workspace = true
flate2.workspace = true
insta = { workspace = true, features = ["json", "filters"] }

[lints]
workspace = true
